# friends_bot

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
projects/func/: .gitattributes  .gitignore  Dockerfile  pyproject.toml
projects/func/resources/: eval_results_clm.txt  vocab.json
projects/func/src/func/: bot.py  get_twitter_client.py  model_loader.py  quote_generator.py  vocab_loader.py
projects/func/tests/: test_bot.py  test_get_twitter_client.py  test_model_loader.py  test_quote_generator.py  test_vocab_loader.py
projects/notebooks/: .gitignore  README.md  pyproject.toml  run_modelling_on_gpt2.sh
projects/notebooks/src/: friends.ipynb  friends2.ipynb  friends_gpt2.ipynb  run_modelling_on_gpt2.sh  script.py
