[tool.poetry]
name = "func"
version = "0.1.0"
description = ""
authors = ["Ricool06 <Ricool06@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.2.0"
tweepy = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
