[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Ricool06 <Ricool06@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.5"
beautifulsoup4 = "^4.9.1"
ipykernel = "^5.3.2"
numpy = "^1.19.0"
tensorflow = "^2.2.0"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
notebook = 'jupyter lab --ip="0.0.0.0" --allow-root'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

